--- a/index.html
+++ b/index.html
@@ -16,12 +16,36 @@
         <header>
             <a href="#" class="logo">JuliaOdonto</a>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre nós</a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Invisalign</a></li>
+                <li><a href="#popup1">Home</a></li>
+                <li><a href="#popup1">Sobre nós</a></li>
+                <li><a href="#popup1">Produtos</a></li>
+                <li><a href="#popup1">Invisalign</a></li>
             </ul>
         </header>
+
+        <!-- popup -->
+        <div class="wrapper" style="position: fixed; top: 10px;">
+        </div>
+        <div id="popup1" class="overlay">
+            <div class="popup">
+                <h2>Em breve</h2>
+                <a class="close" href="#">&times;</a>
+                <div class="content">
+                    <p>Logo as páginas estarão prontas.</p>
+                </div>
+            </div>
+        </div>
+        <div id="popup2" class="overlay light">
+            <a class="cancel" href="#"></a>
+            <div class="popup">
+                <h2>Enviado com sucesso</h2>
+                <div class="content">
+              <p>Entraremos em contato assim que possível.</p>
+                </div>
+            </div>
+        </div>
+        <!-- popup end -->
+
         <div class="content">
             <div class="textBox1">
                 <h2 class="h2">SORRINDO<br><span>PARA O <span class="span" style="font-weight: 300;">FUTURO</span></h2>
@@ -43,13 +67,16 @@
                         <p>Telefone:⠀⠀</p><input type="tel" placeholder="⠀⠀(00)00000-0000"><br>
                     </div>
                     <!-- <a href="#" class="btnEnviar">Enviar</a> -->
-                    <div class="btnDiv">Enviar</div>
+                    <a href="#popup2" style="text-decoration: none;"><div class="btnDiv">Enviar</div></a>
                 </div>
             </div>
             <div class="textBox4">
-                <img src="images/img1.png" alt="" class="img1">  
-                <img src="images/img4.png" alt="" class="img1">  
+                <img src="images/img5.png" alt="" class="img5">
+                <img src="images/img1.png" alt="" class="img1">
+                <img src="images/img4.png" alt="" class="img4">  
             </div>
+            <p style="position: fixed; bottom: 10px; font-size: 20px;">Design por <span style="color: #844cd4; font-weight: 700;">Luana Chan</span>. <a style="font-size: 20px; color: #000;" href="https://luanachan.vercel.app">Site Portólio</a></p>
+            <p style="position: fixed; bottom: 10px; font-size: 20px; right: 100px;">Desenvolvido por <span style="color: #844cd4; font-weight: 700;">Alefi.Dev</span></p>
         </div>
     </section>
 
